# aibidder

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
services/api-server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api-server/alembic/: env.py
services/api-server/alembic/versions/: 20260307_0001_baseline.py  20260308_0002_align_legacy_schema.py  20260309_0003_library_records_foundation.py  20260309_0004_library_reviews.py  20260309_0005_historical_bid_library_link.py
services/api-server/app/: main.py
services/api-server/app/api/: pagination.py
services/api-server/app/core/: anyio_compat.py  config.py  document_ingestion.py  security.py  (+3 more)
services/api-server/scripts/: generate_mineru_clause_commentary_map.py  generate_mineru_norm_index.py  generate_norm_json_with_deepseek.py  validate_norm_structure.py
services/api-server/tests/: conftest.py  test_async_document_ingestion.py  test_async_workbench_pipelines.py  test_auth_rbac.py  test_document_ingestion_unit.py  test_document_parser.py  test_evidence_search.py  test_evidence_unit_rebuild.py  test_file_downloads.py  test_health.py  test_historical_bid_ingestion.py  test_historical_bid_reuse_units.py  test_historical_leakage_checker.py  test_historical_search.py  test_library_records_v2.py  test_model_gateway.py  test_project_document_lifecycle.py  test_review_remediations.py  test_runtime_settings.py  test_storage_backend.py  test_workbench_decomposition.py  test_workbench_generation_approval.py  test_workbench_library_assets.py  test_workbench_library_detection.py  test_workbench_modules.py  test_workbench_pipeline.py  test_workbench_progress_streams.py  test_workbench_review_confirmation.py  test_workbench_review_remediation.py  test_workbench_submission_filters.py
(+103 files in other folders)
